# ftmo-calendar

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  LICENSE  README.md  check_models.py  compose.yaml  config.example.toml  main.py  pyproject.toml  requirements.txt  run.sh  test_generation.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.playwright-cli/: page-2026-06-09T20-14-16-179Z.yml  page-2026-06-09T20-15-37-043Z.yml
docs/: DEPLOYMENT.md
docs/superpowers/plans/: 2026-06-09-phase1-trustworthy-sync.md  2026-06-09-phase2-3-reach.md  2026-06-09-phase3-deep.md
docs/superpowers/specs/: 2026-06-09-autoftmocalendar-redesign-design.md
scripts/: autodeploy.sh
src/ftmo_calendar/: __init__.py  cli.py  config.py  models.py  pipeline.py  server.py  state.py  stats.py  web.py
src/ftmo_calendar/notify/: base.py  discord.py  factory.py  telegram.py
src/ftmo_calendar/parsing/: factory.py  gemini.py  llm.py  openai_compat.py  validate.py
src/ftmo_calendar/sinks/: auth.py  base.py  google_calendar.py  ics.py  null.py
src/ftmo_calendar/sources/: ftmo.py
tests/: test_auth.py  test_backends.py  test_calendar_sink.py  test_cli.py  test_config.py  test_extractor.py  test_ftmo_source.py  test_ics.py  test_models.py  test_notify.py  test_null_sink.py  test_package.py  test_pipeline.py  test_server.py  test_state.py  test_stats.py  test_validate.py  test_web.py
tests/fixtures/: listing.html  post.html
